--- a/main.css
+++ b/main.css
@@ -3,9 +3,17 @@ body {
 }
 
 h1 {
-    color: white;
+    color: #ffffff;
 }
 
-li.list-inline-item {
-    color: white;
+li.list-inline-item>a {
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 24px;
+}
+
+li.list-inline-item>a:hover {
+    color: #dcc08e;
+    text-shadow: 1px 1px 0px #000000;
+    text-decoration: none;
 }
