--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -5,7 +5,7 @@
         <li class="list-inline-item"><a href="#/">home</a></li>
         <li class="list-inline-item"><a href="#/about">about</a></li>
         {{#each this}}
-        <li class="list-inline-item"><a href="#/category/{{this}}">{{this}}</a></li>
+        <li class="list-inline-item"><a href="#/category/show/{{this}}">{{this}}</a></li>
         {{/each}}
     </ul>
     </nav>
