--- a/scss/main.css
+++ b/scss/main.css
@@ -1,15 +1,18 @@
 body {
-  background-color: #2c2c2c; }
+  background-color: #2c2c2c;
+}
 
 h1 {
-  color: #ffffff; }
+  color: #ffffff;
+}
 
 .nav {
   display: flex;
   flex-wrap: wrap;
   padding-left: 0;
   margin-bottom: 0;
-  list-style: none; }
+  list-style: none;
+}
 
 .nav-link {
   display: block;
@@ -17,13 +20,23 @@ h1 {
   text-transform: uppercase;
   font-size: 24px;
   text-decoration: none;
-  padding: 0.5rem 0.5rem; }
+  padding: 0.5rem 0.5rem;
+}
 
 .nav-link:hover {
   color: #dcc08e;
   text-shadow: 1px 1px 0px #000000;
-  text-decoration: none; }
+  text-decoration: none;
+}
+
+form {
+  background-color: gray;
+}
 
 .search-box {
   background: none;
-  border: none; }
+  border: none;
+}
+ 
+
+ /*# sourceMappingURL= main.css.map */
