added bootstrap grid system

--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -17,10 +17,16 @@
 <footer>
     <div class="row">
         <div class="col">
-            test
+            <h2>test1</h2>
         </div>
         <div class="col">
-            test
+            <h2>test2</h2>
+        </div>
+        <div class="col">
+            <h2>test3</h2>
+        </div>
+        <div class="col">
+            <h2>test4</h2>
         </div>
     </div>
 </footer>
