--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -6,6 +6,11 @@ h1 {
     color: $link-color;
 }
 
+h2 {
+    color: $link-hover-color;
+    ;
+}
+
 .nav {
     display: flex;
     flex-wrap: wrap;
@@ -27,10 +32,6 @@ h1 {
     color: $link-hover-color;
     text-shadow: 1px 1px 0px #000000;
     text-decoration: $link-hover-decoration;
-}
-
-form {
-    background-color: gray;
 }
 
 .search-box {
