added navbar from bootstrap

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,3 +1,5 @@
 @import "mixins/breakpoints";
 @import "mixins/bootstrap-grid-framework";
 @import "mixins/grid";
+@import "mixins/hover";
+@import "mixins/border-radius"
