--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -1,6 +1,10 @@
 <header>
     <h1>test</h1>
-    <nav class="nav">
+    <nav class="navbar nav">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
         <a class="nav-link" href="#/">home</a></li>
         <a class="nav-link" href="#/about">about</a></li>
         {{#each this}}
@@ -13,20 +17,52 @@
 
 </header>
 
+<main>
+    <div class="row">
+        <div class="col">first row 1 blog post</div>
+        <div class="col">first row 2 blog post</div>
+        <div class="col">first row 3 blog post</div>
+        <div class="col">first row 4 blog post</div>
+        <div class="col">first row 5 blog post</div>
+        <div class="col">first row 6 blog post</div>
+    </div>
+    <div class="row">
+        <div class="col">second row 1 blog post</div>
+        <div class="col">second row 2 blog post</div>
+        <div class="col">second row 3 blog post</div>
+        <div class="col">second row 4 blog post</div>
+        <div class="col">second row 5 blog post</div>
+        <div class="col">second row 6 blog post</div>
+    </div>
+</main>
 
 <footer>
     <div class="row">
         <div class="col">
             <h2>test1</h2>
+            <div>inner 1.1</div>
+            <div>inner 1.2</div>
+            <div>inner 1.3</div>
+            <div>inner 1.4</div>
         </div>
         <div class="col">
             <h2>test2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam necessitatibus at, accusantium voluptatum reiciendis
+                iusto officia eaque! Corporis eligendi nemo voluptas harum blanditiis, molestiae voluptatibus rerum consequuntur
+                fugiat inventore asperiores.</p>
         </div>
         <div class="col">
             <h2>test3</h2>
+            <div>inner 3.1</div>
+            <div>inner 3.2</div>
+            <div>inner3.3</div>
         </div>
         <div class="col">
             <h2>test4</h2>
+            <div>inner 4.1</div>
+            <div>inner 4.2</div>
+            <div>inner 4.3</div>
+
         </div>
     </div>
 </footer>
