--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -14,7 +14,7 @@ h2 {
 .nav {
     display: flex;
     flex-wrap: wrap;
-    padding-left: 0;
+    padding-left: 15px;
     margin-bottom: 0;
     list-style: none;
 }
