--- a/scss/main.css
+++ b/scss/main.css
@@ -6,10 +6,14 @@ h1 {
   color: #ffffff;
 }
 
+h2 {
+  color: #dcc08e;
+}
+
 .nav {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 0;
+  padding-left: 15px;
   margin-bottom: 0;
   list-style: none;
 }
@@ -27,10 +31,6 @@ h1 {
   color: #dcc08e;
   text-shadow: 1px 1px 0px #000000;
   text-decoration: none;
-}
-
-form {
-  background-color: gray;
 }
 
 .search-box {
