--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -1,20 +1,26 @@
 <header>
     <h1>test</h1>
-    <nav class="navbar nav">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-        <a class="nav-link" href="#/">home</a></li>
-        <a class="nav-link" href="#/about">about</a></li>
-        {{#each this}}
-        <a class="nav-link" href="#/category/show/{{this}}">{{this}}</a></li>
-        {{/each}}
-        <form>
-            <input class="search-box" type="text" placeholder="Search this website..." name="search">
-        </form>
+    <nav class="navbar navbar-expand-lg navbar-default">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerc"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggler">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="#/">Home</a>
+                </li>
+                {{#each this}}
+                <li class="nav-item"></li>
+                <a class="nav-link" href="#/category/show/{{this}}">{{this}}</a>
+                </li>
+                {{/each}}
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search this website..." aria-label="Search">
+            </form>
+        </div>
     </nav>
-
 </header>
 
 <main>
