--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -173,86 +173,43 @@
 //
 // Styles for switching between navbars with light or dark background.
 // Dark links against a light background
-.navbar-light {
+.navbar-default {
     .navbar-brand {
-        color: $navbar-light-active-color;
+        color: $navbar-default-active-color;
         @include hover-focus {
-            color: $navbar-light-active-color;
+            color: $navbar-default-active-color;
         }
     }
     .navbar-nav {
         .nav-link {
-            color: $navbar-light-color;
+            color: $navbar-default-color;
             @include hover-focus {
-                color: $navbar-light-hover-color;
+                color: $navbar-default-hover-color;
             }
             &.disabled {
-                color: $navbar-light-disabled-color;
+                color: $navbar-default-disabled-color;
             }
         }
         .show>.nav-link,
         .active>.nav-link,
         .nav-link.show,
         .nav-link.active {
-            color: $navbar-light-active-color;
+            color: $navbar-default-active-color;
         }
     }
     .navbar-toggler {
-        color: $navbar-light-color;
-        border-color: $navbar-light-toggler-border-color;
+        color: $navbar-default-color;
+        border-color: $navbar-default-toggler-border-color;
     }
     .navbar-toggler-icon {
-        background-image: $navbar-light-toggler-icon-bg;
+        background-image: $navbar-default-toggler-icon-bg;
     }
     .navbar-text {
-        color: $navbar-light-color;
+        color: $navbar-default-color;
         a {
-            color: $navbar-light-active-color;
+            color: $navbar-default-active-color;
             @include hover-focus {
-                color: $navbar-light-active-color;
-            }
-        }
-    }
-}
-
-// White links against a dark background
-.navbar-dark {
-    .navbar-brand {
-        color: $navbar-dark-active-color;
-        @include hover-focus {
-            color: $navbar-dark-active-color;
-        }
-    }
-    .navbar-nav {
-        .nav-link {
-            color: $navbar-dark-color;
-            @include hover-focus {
-                color: $navbar-dark-hover-color;
-            }
-            &.disabled {
-                color: $navbar-dark-disabled-color;
-            }
-        }
-        .show>.nav-link,
-        .active>.nav-link,
-        .nav-link.show,
-        .nav-link.active {
-            color: $navbar-dark-active-color;
-        }
-    }
-    .navbar-toggler {
-        color: $navbar-dark-color;
-        border-color: $navbar-dark-toggler-border-color;
-    }
-    .navbar-toggler-icon {
-        background-image: $navbar-dark-toggler-icon-bg;
-    }
-    .navbar-text {
-        color: $navbar-dark-color;
-        a {
-            color: $navbar-dark-active-color;
-            @include hover-focus {
-                color: $navbar-dark-active-color;
+                color: $navbar-default-active-color;
             }
         }
     }
