--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,4 +2,6 @@
 @import "mixins/bootstrap-grid-framework";
 @import "mixins/grid";
 @import "mixins/hover";
-@import "mixins/border-radius"
+@import "mixins/border-radius";
+@import "mixins/image";
+@import "mixins/visibility";
