--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -1,5 +1,7 @@
 <header>
-    <h1>test</h1>
+    <div class="logo img-fluid d-none d-lg-block">
+<img src="./images/logo.png" alt="TheStyle">
+    </div>
     <nav class="navbar navbar-expand-lg navbar-default">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerc"
             aria-expanded="false" aria-label="Toggle navigation">
