--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -1,6 +1,6 @@
 <header>
-    <div class="logo img-fluid d-none d-lg-block">
-<img src="./images/logo.png" alt="TheStyle">
+    <div class="img-fluid d-none d-lg-block logo">
+        <img src="./images/logo.png" alt="TheStyle">
     </div>
     <nav class="navbar navbar-expand-lg navbar-default">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerc"
@@ -27,12 +27,12 @@
 
 <main>
     <div class="row">
-        <div class="col">first row 1 blog post</div>
-        <div class="col">first row 2 blog post</div>
-        <div class="col">first row 3 blog post</div>
-        <div class="col">first row 4 blog post</div>
-        <div class="col">first row 5 blog post</div>
-        <div class="col">first row 6 blog post</div>
+    <div class="col">first row 1 blog post</div>
+    <div class="col">first row 2 blog post</div>
+    <div class="col">first row 3 blog post</div>
+    <div class="col">first row 4 blog post</div>
+    <div class="col">first row 5 blog post</div>
+    <div class="col">first row 6 blog post</div>
     </div>
     <div class="row">
         <div class="col">second row 1 blog post</div>
