--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -34,24 +34,8 @@ $transition-fade:             opacity .15s linear !default;
 $transition-collapse:         height .35s ease !default;
 
 
-$font-family-sans-serif: -apple-system,
-BlinkMacSystemFont,
-"Segoe UI",
-Roboto,
-"Helvetica Neue",
-Arial,
-sans-serif,
-"Apple Color Emoji",
-"Segoe UI Emoji",
-"Segoe UI Symbol" !default;
-$font-family-monospace: "SFMono-Regular",
-Menlo,
-Monaco,
-Consolas,
-"Liberation Mono",
-"Courier New",
-monospace !default;
-$font-family-base: $font-family-sans-serif !default;
+
+$font-family-base: url("../fonts/League-Gothic/LeagueGothic-Regular.otf") !default;
 // stylelint-enable value-keyword-case
 $font-size-base: 1rem !default; // Assumes the browser default, typically `16px`
 $font-size-lg: 1.25rem !default;
