--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
+@font-face {
+  font-family: "LeagueGothicRegular";
+  src: url("../fonts/League-Gothic/LeagueGothic-Regular.otf");
+  font-weight: normal; }
+
 body {
-  background-color: #2c2c2c; }
-
-h1 {
-  color: #ffffff; }
-
-h2 {
-  color: #dcc08e; }
+  background-color: #2c2c2c;
+  font-family: LeagueGothicRegular; }
 
 .nav {
   display: flex;
@@ -797,7 +797,7 @@ h2 {
     color: #dcc08e; }
 
 .navbar-default .navbar-nav .nav-link {
-  color: #dcc08e; }
+  color: white; }
   .navbar-default .navbar-nav .nav-link:focus, .navbar-default .navbar-nav .nav-link:hover {
     color: rgba(220, 192, 142, 0.75); }
   .navbar-default .navbar-nav .nav-link.disabled {
@@ -810,14 +810,14 @@ h2 {
   color: #dcc08e; }
 
 .navbar-default .navbar-toggler {
-  color: #dcc08e;
-  border-color: rgba(220, 192, 142, 0.8); }
+  color: white;
+  border-color: rgba(220, 192, 142, 0.1); }
 
 .navbar-default .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#dcc08e' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); }
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); }
 
 .navbar-default .navbar-text {
-  color: #dcc08e; }
+  color: white; }
   .navbar-default .navbar-text a {
     color: #dcc08e; }
     .navbar-default .navbar-text a:focus, .navbar-default .navbar-text a:hover {
@@ -828,11 +828,6 @@ h2 {
 
 .invisible {
   visibility: hidden !important; }
-
-@font-face {
-  font-family: "LeagueGothicRegular";
-  src: url("../fonts/League-Gothic/LeagueGothic-Regular.otf");
-  font-weight: normal; }
 
 .logo {
   padding: 125px 0 0 65px; }
