--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,8 @@
 $body-bg: #2c2c2c !default;
 $main-color: #dcc08e !default;
 
+
+
 // Options
 //
 // Quickly modify global styling by enabling or disabling optional features.
@@ -36,7 +38,7 @@ $transition-collapse:         height .35s ease !default;
 
 
 
-$font-family-base: url("../fonts/League-Gothic/LeagueGothic-Regular.otf") !default;
+$font-family-base: "LeagueGothicRegular" !default;
 // stylelint-enable value-keyword-case
 $font-size-base: 1rem !default; // Assumes the browser default, typically `16px`
 $font-size-lg: 1.25rem !default;
@@ -78,12 +80,12 @@ $navbar-toggler-padding-x: .75rem !default;
 $navbar-toggler-font-size: $font-size-lg !default;
 $navbar-toggler-border-radius: $btn-border-radius !default;
 
-$navbar-default-color: rgba($main-color,1) !default;
+$navbar-default-color: rgba(#ffffff, 1) !default;
 $navbar-default-hover-color: rgba($main-color, .75) !default;
 $navbar-default-active-color: rgba($main-color, 1) !default;
 $navbar-default-disabled-color: rgba($main-color, .25) !default;
 $navbar-default-toggler-icon-bg: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='" + $navbar-default-color + "' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-$navbar-default-toggler-border-color: rgba($main-color,.8) !default;
+$navbar-default-toggler-border-color: rgba($main-color,.1) !default;
 
 
 
