--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -18,7 +18,7 @@
     flex-wrap: wrap; // allow us to do the line break for collapsing content
     align-items: center;
     justify-content: space-between; // space out brand from logo
-    padding: $navbar-padding-y $navbar-padding-x;
+    padding-left: 68px;   
     // Because flex properties aren't inherited, we need to redeclare these first
     // few properities so that content nested within behave properly.
     >.container,
