working ot layout

--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -26,22 +26,51 @@
 </header>
 
 <main>
-    <div class="row">
-    <div class="col">first row 1 blog post</div>
-    <div class="col">first row 2 blog post</div>
-    <div class="col">first row 3 blog post</div>
-    <div class="col">first row 4 blog post</div>
-    <div class="col">first row 5 blog post</div>
-    <div class="col">first row 6 blog post</div>
+    <div class="container post-container">
+        <!-- Example row of columns -->
+        <div class="row">
+            <article class="col post">
+                <h2>Heading</h2>
+                                <img src="http://lorempixel.com/228/180/" alt="post image">
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                    condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
+                    Donec sed odio dui. </p>
+            </article>
+            <div class="col post">
+                <h2>Heading</h2>
+                                <img src="http://lorempixel.com/228/180/" alt="post image">
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                    condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
+                    Donec sed odio dui. </p>
+            </div>
+            <div class="col post">
+                <h2>Heading</h2>
+                <img src="http://lorempixel.com/228/180/" alt="post image">
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
+                    felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+                    massa justo sit amet risus.</p>
+            </div>
+            <div class="col post">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
+                    felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+                    massa justo sit amet risus.</p>
+            </div>
+            <div class="col post">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
+                    felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+                    massa justo sit amet risus.</p>
+            </div>
+            <div class="col post">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
+                    felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+                    massa justo sit amet risus.</p>
+            </div>
+        </div>
     </div>
-    <div class="row">
-        <div class="col">second row 1 blog post</div>
-        <div class="col">second row 2 blog post</div>
-        <div class="col">second row 3 blog post</div>
-        <div class="col">second row 4 blog post</div>
-        <div class="col">second row 5 blog post</div>
-        <div class="col">second row 6 blog post</div>
-    </div>
+
 </main>
 
 <footer>
