--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,3 +1,13 @@
 .logo {
     padding: 115px 0 0 60px;
 }
+
+.post {
+    border: 2px solid #ffffff;
+    margin-left: 5px;
+    padding: 0px;
+}
+
+.post-container {
+    margin-left: 60px;
+}
