woring on posts

--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -30,40 +30,67 @@
         <!-- Example row of columns -->
         <div class="row">
             <article class="col post">
-                <h2>Heading</h2>
-                                <img src="http://lorempixel.com/228/180/" alt="post image">
+                <div class="post-category">
+                    <ul>
+                        <li><a href="#/category">Category</a></li>
+                    </ul>
+                </div>
+                <img src="http://lorempixel.com/228/180/" alt="post image">
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
                     condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
                     Donec sed odio dui. </p>
             </article>
             <div class="col post">
-                <h2>Heading</h2>
-                                <img src="http://lorempixel.com/228/180/" alt="post image">
+                <div class="post-category">
+                    <ul>
+                        <li><a href="#/category">Category</a></li>
+                    </ul>
+                </div>
+                <img src="http://lorempixel.com/228/180/" alt="post image">
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
                     condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
                     Donec sed odio dui. </p>
             </div>
             <div class="col post">
-                <h2>Heading</h2>
+                <div class="post-category">
+                    <ul>
+                        <li><a href="#/category">Category</a></li>
+                    </ul>
+                </div>
                 <img src="http://lorempixel.com/228/180/" alt="post image">
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
                     felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
                     massa justo sit amet risus.</p>
             </div>
             <div class="col post">
-                <h2>Heading</h2>
+                <div class="post-category">
+                    <ul>
+                        <li><a href="#/category">Category</a></li>
+                    </ul>
+                </div>
+                <img src="http://lorempixel.com/228/180/" alt="post image">
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
                     felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
                     massa justo sit amet risus.</p>
             </div>
             <div class="col post">
-                <h2>Heading</h2>
+                <div class="post-category">
+                    <ul>
+                        <li><a href="#/category">Category</a></li>
+                    </ul>
+                </div>
+                <img src="http://lorempixel.com/228/180/" alt="post image">
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
                     felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
                     massa justo sit amet risus.</p>
             </div>
             <div class="col post">
-                <h2>Heading</h2>
+                <div class="post-category">
+                    <ul>
+                        <li><a href="#/category">Category</a></li>
+                    </ul>
+                </div>
+                <img src="http://lorempixel.com/228/180/" alt="post image">
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
                     felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
                     massa justo sit amet risus.</p>
