--- a/main.css
+++ b/main.css
@@ -833,12 +833,30 @@ body {
   padding: 115px 0 0 60px; }
 
 .post {
-  border: 2px solid #ffffff;
-  margin-left: 5px;
-  padding: 0px; }
+  border: 2.5px solid #ffffff;
+  margin-left: 8px;
+  margin-bottom: 8px;
+  padding: 0px;
+  max-width: min-content; }
 
 .post-container {
   margin-left: 60px; }
+
+.post-image {
+  position: absolute; }
+
+.post-category {
+  margin-left: 60px;
+  position: absolute;
+  background-color: #9a1d0d;
+  top: 0px;
+  right: 0px; }
+  .post-category ul {
+    list-style: none; }
+    .post-category ul a {
+      text-decoration: none;
+      color: #ffffff;
+      font-size: 22px; }
 
 .fade {
   opacity: 0;
