--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -32,10 +32,19 @@
             <article class="col post">
                 <div class="post-category">
                     <ul>
-                        <li><a href="#/category">Category</a></li>
+                        <li>
+                            <a href="#/Educatio">Some long category</a>
+                        </li>
                     </ul>
                 </div>
-                <img src="http://lorempixel.com/228/180/" alt="post image">
+                <span class="month">AUG</span>
+                <span class="day">10</span>
+                <img src="http://lorempixel.com/222/180/" alt="post image">
+                <h2>
+                    <a href="#/post-title">Post Title Goes Here</a>
+                </h2>
+                <p class="author">posted by nick roach</p>
+                <div class="border"></div>
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
                     condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
                     Donec sed odio dui. </p>
@@ -43,10 +52,18 @@
             <div class="col post">
                 <div class="post-category">
                     <ul>
-                        <li><a href="#/category">Category</a></li>
+                        <li>
+                            <a href="#/category">Category</a>
+                        </li>
                     </ul>
                 </div>
-                <img src="http://lorempixel.com/228/180/" alt="post image">
+                <span class="month">SEP</span>
+                <img src="http://lorempixel.com/480/180/" alt="post image">
+                <h2>
+                    <a href="#/post-title">Post Title Goes Here</a>
+                </h2>
+                <p class="author">posted by nick roach</p>
+                <div class="border"></div>
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
                     condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
                     Donec sed odio dui. </p>
@@ -54,10 +71,18 @@
             <div class="col post">
                 <div class="post-category">
                     <ul>
-                        <li><a href="#/category">Category</a></li>
+                        <li>
+                            <a href="#/category">Category</a>
+                        </li>
                     </ul>
                 </div>
-                <img src="http://lorempixel.com/228/180/" alt="post image">
+                <span class="month">SEP</span>
+                <img src="http://lorempixel.com/222/180/" alt="post image">
+                <h2>
+                    <a href="#/post-title">Post Title Goes Here</a>
+                </h2>
+                <p class="author">posted by nick roach</p>
+                <div class="border"></div>
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
                     felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
                     massa justo sit amet risus.</p>
@@ -65,10 +90,18 @@
             <div class="col post">
                 <div class="post-category">
                     <ul>
-                        <li><a href="#/category">Category</a></li>
+                        <li>
+                            <a href="#/category">Category</a>
+                        </li>
                     </ul>
                 </div>
-                <img src="http://lorempixel.com/228/180/" alt="post image">
+                <span class="month">OCT</span>
+                <img src="http://lorempixel.com/222/180/" alt="post image">
+                <h2>
+                    <a href="#/post-title">Post Title Goes Here</a>
+                </h2>
+                <p class="author">posted by nick roach</p>
+                <div class="border"></div>
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
                     felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
                     massa justo sit amet risus.</p>
@@ -76,10 +109,18 @@
             <div class="col post">
                 <div class="post-category">
                     <ul>
-                        <li><a href="#/category">Category</a></li>
+                        <li>
+                            <a href="#/category">Category</a>
+                        </li>
                     </ul>
                 </div>
-                <img src="http://lorempixel.com/228/180/" alt="post image">
+                <span class="month">AUG</span>
+                <img src="http://lorempixel.com/222/180/" alt="post image">
+                <h2>
+                    <a href="#/post-title">Post Title Goes Here</a>
+                </h2>
+                <p class="author">posted by nick roach</p>
+                <div class="border"></div>
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
                     felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
                     massa justo sit amet risus.</p>
@@ -87,10 +128,18 @@
             <div class="col post">
                 <div class="post-category">
                     <ul>
-                        <li><a href="#/category">Category</a></li>
+                        <li>
+                            <a href="#/category">Category</a>
+                        </li>
                     </ul>
                 </div>
-                <img src="http://lorempixel.com/228/180/" alt="post image">
+                <span class="month">SEP</span>
+                <img src="http://lorempixel.com/222/180/" alt="post image">
+                <h2>
+                    <a href="#/post-title">Post Title Goes Here</a>
+                </h2>
+                <p class="author">posted by nick roach</p>
+                <div class="border"></div>
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
                     felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
                     massa justo sit amet risus.</p>
