--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -2,12 +2,53 @@
     padding: 115px 0 0 60px;
 }
 
+main {
+    padding-top: 46px;
+    padding-left: 6px;
+}
+
 .post {
-    border: 2.5px solid $main-link-color;
-    margin-left: 8px;
-    margin-bottom: 8px;
+    border: 5px solid $main-link-color;
+    margin-left: 26px;
+    margin-bottom: 24px;
     padding: 0px;
     max-width: min-content;
+    background-color: $main-link-color;
+
+    span {
+        color: $main-link-color;
+        font-size: 48px;
+        text-shadow: 1px 2px 4px rgba(0,0,0,0.3);
+    }
+    span.month{
+        position: absolute;
+        top: 28px;
+        right: 10px;
+    }
+    span.day{
+        position: absolute;
+        top: 70px;
+        right: 10px;
+    }
+
+    h2 {
+        font-size: 24px;
+        margin-top: 14px;
+        padding-left: 14px;
+        padding-right: 14px;
+        a{
+            color: #9a1d0d;
+            text-decoration: none;
+            text-transform: uppercase;
+            letter-spacing: -1px;
+        }
+    }
+    p.author {
+        text-transform: uppercase;
+    }
+    div.border {
+        border: 1px dotted #BCBCBC;
+    }
 }
 
 .post-container {
@@ -26,8 +67,12 @@
     right: 0px;
     ul {
         list-style: none;
+        padding: 5px;
+        margin-top: 2px;
+        margin-bottom: 2px;
         a {
             text-decoration: none;
+            text-transform: uppercase;
             color: $main-link-color;
             font-size: 22px;
         }
