working on layout....

--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -33,27 +33,26 @@
                 <div class="post-category">
                     <ul>
                         <li>
-                            <a href="#/Educatio">Some long category</a>
+                            <a href="#/Educatio">Entertainment</a>
                         </li>
                     </ul>
                 </div>
-                <span class="month">AUG</span>
-                <span class="day">10</span>
+                <span class="month">SEP</span>
+                <span class="day">13</span>
                 <img src="http://lorempixel.com/222/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
                 <p class="author">posted by nick roach</p>
                 <div class="border"></div>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                    condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
-                    Donec sed odio dui. </p>
+                <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
+                    posuere lorem. Sed. </p>
             </article>
             <div class="col post">
                 <div class="post-category">
                     <ul>
                         <li>
-                            <a href="#/category">Category</a>
+                            <a href="#/category">Fashion</a>
                         </li>
                     </ul>
                 </div>
@@ -72,7 +71,7 @@
                 <div class="post-category">
                     <ul>
                         <li>
-                            <a href="#/category">Category</a>
+                            <a href="#/category">Entertainment</a>
                         </li>
                     </ul>
                 </div>
