--- a/main.css
+++ b/main.css
@@ -849,26 +849,30 @@ main {
     text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3); }
   .post span.month {
     position: absolute;
-    top: 28px;
-    right: 10px; }
+    top: 30px;
+    right: 5px; }
   .post span.day {
     position: absolute;
     top: 70px;
-    right: 10px; }
+    right: 5px; }
   .post h2 {
-    font-size: 24px;
-    margin-top: 14px;
-    padding-left: 14px;
-    padding-right: 14px; }
+    font-size: 30px;
+    margin-top: 2px;
+    padding-left: 10px;
+    padding-right: 14px;
+    margin-bottom: 0px; }
     .post h2 a {
       color: #9a1d0d;
       text-decoration: none;
-      text-transform: uppercase;
-      letter-spacing: -1px; }
+      text-transform: uppercase; }
   .post p.author {
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    margin: 0px; }
   .post div.border {
     border: 1px dotted #BCBCBC; }
+  .post .post-text {
+    font-size: 13px;
+    color: #7a7575; }
 
 .post-container {
   margin-left: 60px; }
@@ -884,7 +888,7 @@ main {
   right: 0px; }
   .post-category ul {
     list-style: none;
-    padding: 5px;
+    padding: 2px 5px 2px 5px;
     margin-top: 2px;
     margin-bottom: 2px; }
     .post-category ul a {
