--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -22,32 +22,37 @@ main {
     }
     span.month{
         position: absolute;
-        top: 28px;
-        right: 10px;
+        top: 30px;
+        right: 5px;
     }
     span.day{
         position: absolute;
         top: 70px;
-        right: 10px;
+        right: 5px;
     }
 
     h2 {
-        font-size: 24px;
-        margin-top: 14px;
-        padding-left: 14px;
+        font-size: 30px;
+        margin-top: 2px;
+        padding-left: 10px;
         padding-right: 14px;
+        margin-bottom: 0px;
         a{
             color: #9a1d0d;
             text-decoration: none;
             text-transform: uppercase;
-            letter-spacing: -1px;
         }
     }
     p.author {
         text-transform: uppercase;
+        margin: 0px;
     }
     div.border {
         border: 1px dotted #BCBCBC;
+    }
+    .post-text{
+        font-size: 13px;
+        color: #7a7575;
     }
 }
 
@@ -67,7 +72,7 @@ main {
     right: 0px;
     ul {
         list-style: none;
-        padding: 5px;
+        padding: 2px 5px 2px 5px;
         margin-top: 2px;
         margin-bottom: 2px;
         a {
