added missing font, various improvements

--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -57,13 +57,14 @@
                     </ul>
                 </div>
                 <span class="month">SEP</span>
+                <span class="day">13</span>
                 <img src="http://lorempixel.com/480/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
                 <p class="author">posted by nick roach</p>
                 <div class="border"></div>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                <p class="post-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
                     condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
                     Donec sed odio dui. </p>
             </div>
@@ -76,15 +77,15 @@
                     </ul>
                 </div>
                 <span class="month">SEP</span>
+                <span class="day">13</span>
                 <img src="http://lorempixel.com/222/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
                 <p class="author">posted by nick roach</p>
                 <div class="border"></div>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-                    felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-                    massa justo sit amet risus.</p>
+                <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
+                    posuere lorem.</p>
             </div>
             <div class="col post">
                 <div class="post-category">
@@ -95,15 +96,15 @@
                     </ul>
                 </div>
                 <span class="month">OCT</span>
+                <span class="day">13</span>
                 <img src="http://lorempixel.com/222/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
                 <p class="author">posted by nick roach</p>
                 <div class="border"></div>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-                    felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-                    massa justo sit amet risus.</p>
+                <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
+                    posuere lorem.</p>
             </div>
             <div class="col post">
                 <div class="post-category">
@@ -114,15 +115,15 @@
                     </ul>
                 </div>
                 <span class="month">AUG</span>
+                <span class="day">13</span>
                 <img src="http://lorempixel.com/222/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
                 <p class="author">posted by nick roach</p>
                 <div class="border"></div>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-                    felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-                    massa justo sit amet risus.</p>
+                <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
+                    posuere lorem.</p>
             </div>
             <div class="col post">
                 <div class="post-category">
@@ -133,15 +134,15 @@
                     </ul>
                 </div>
                 <span class="month">SEP</span>
+                <span class="day">13</span>
                 <img src="http://lorempixel.com/222/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
                 <p class="author">posted by nick roach</p>
                 <div class="border"></div>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-                    felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-                    massa justo sit amet risus.</p>
+                <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
+                    posuere lorem.</p>
             </div>
         </div>
     </div>
