--- a/main.css
+++ b/main.css
@@ -1,12 +1,3 @@
-@font-face {
-  font-family: "LeagueGothicRegular";
-  src: url("../fonts/League-Gothic/LeagueGothic-Regular.otf");
-  font-weight: normal; }
-
-body {
-  background-color: #2c2c2c;
-  font-family: LeagueGothicRegular; }
-
 .nav {
   display: flex;
   flex-wrap: wrap;
@@ -829,6 +820,15 @@ body {
 .invisible {
   visibility: hidden !important; }
 
+@font-face {
+  font-family: "LeagueGothicRegular";
+  src: url("../fonts/League-Gothic/LeagueGothic-Regular.otf");
+  font-weight: normal; }
+
+body {
+  background-color: #2c2c2c;
+  font-family: LeagueGothicRegular; }
+
 .logo {
   padding: 115px 0 0 60px; }
 
@@ -867,10 +867,13 @@ main {
       text-transform: uppercase; }
   .post p.author {
     text-transform: uppercase;
-    margin: 0px; }
+    margin: 0px;
+    padding-left: 10px;
+    padding-right: 14px; }
   .post div.border {
     border: 1px dotted #BCBCBC; }
   .post .post-text {
+    font-family: "Droid Sans";
     font-size: 13px;
     color: #7a7575; }
 
