--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: "LeagueGothicRegular";
+    src: url("../fonts/League-Gothic/LeagueGothic-Regular.otf");
+    font-weight: normal;
+  }
+
+  body {
+    background-color: $body-bg;
+    font-family: LeagueGothicRegular;
+}
+
+
 .logo {
     padding: 115px 0 0 60px;
 }
@@ -46,11 +58,14 @@ main {
     p.author {
         text-transform: uppercase;
         margin: 0px;
+        padding-left: 10px;
+        padding-right: 14px;
     }
     div.border {
         border: 1px dotted #BCBCBC;
     }
     .post-text{
+        font-family: $font-family-secondary;      
         font-size: 13px;
         color: #7a7575;
     }
