--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -39,6 +39,7 @@ $transition-collapse:         height .35s ease !default;
 
 
 $font-family-base: "LeagueGothicRegular" !default;
+$font-family-secondary: "Droid Sans" !default;
 // stylelint-enable value-keyword-case
 $font-size-base: 1rem !default; // Assumes the browser default, typically `16px`
 $font-size-lg: 1.25rem !default;
