--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -17,9 +17,19 @@
                 <a class="nav-link" href="#/category/show/{{this}}">{{this}}</a>
                 </li>
                 {{/each}}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        Dropdown link
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search this website..." aria-label="Search">
+                <input class="form-control mr-sm-2 search" type="text" placeholder="Search this website..." aria-label="Search">
             </form>
         </div>
     </nav>
@@ -46,7 +56,7 @@
                 <p class="author">posted by nick roach</p>
                 <div class="border"></div>
                 <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
-                    posuere lorem. Sed. </p>
+                    posuere lorem.</p>
             </article>
             <div class="col post">
                 <div class="post-category">
