--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -9,6 +9,13 @@
     font-family: LeagueGothicRegular;
 }
 
+input.search{
+    //set all variables later
+    background-color: #232223;
+    border-color: transparent;
+    border-bottom-color: #323232;
+    border-right-color: #323232;
+}
 
 .logo {
     padding: 115px 0 0 60px;
@@ -56,6 +63,7 @@ main {
         }
     }
     p.author {
+        font-size: 18px;
         text-transform: uppercase;
         margin: 0px;
         padding-left: 10px;
@@ -63,11 +71,16 @@ main {
     }
     div.border {
         border: 1px dotted #BCBCBC;
+        margin-top: 10px;
     }
     .post-text{
         font-family: $font-family-secondary;      
         font-size: 13px;
         color: #7a7575;
+        margin-top: 8px;
+        padding-left: 12px;
+        padding-right: 12px;
+        line-height: 19px;
     }
 }
 
