--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -6,3 +6,7 @@
 @import "mixins/image";
 @import "mixins/visibility";
 @import "mixins/transition";
+@import "mixins/caret";
+@import "mixins/box-shadow";
+@import "mixins/nav-divider";
+@import "mixins/forms";
