--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,14 +1,22 @@
+$gray: #adb5bd;
+$white: #ffffff;
+$black: #000000;
 $body-bg: #2c2c2c !default;
+$body-color : $gray !default;
 $main-color: #dcc08e !default;
-$main-link-color: #ffffff;
-
+$main-link-color: $white;
+$text-muted: $gray !default;
 
 // Options
 //
 // Quickly modify global styling by enabling or disabling optional features.
 
-$enable-rounded:            true !default;
-$enable-transitions:            true !default;
+$enable-caret : true !default;
+$enable-rounded : true !default;
+$enable-transitions : true !default;
+$enable-shadows:            false !default;
+$enable-gradients:          false !default;
+$enable-hover-media-query:  false !default;
 
 // Spacing
 $spacer: 1rem !default;
@@ -27,17 +35,12 @@ $border-color: #adb5bd !default;
 $border-radius: .25rem !default;
 $border-radius-lg: .3rem !default;
 $border-radius-sm: .2rem !default;
-$component-active-color:      #fff !default;
-$component-active-bg:         theme-color("primary") !default;
-
-$caret-width:                 .3em !default;
-
-$transition-base:             all .2s ease-in-out !default;
-$transition-fade:             opacity .15s linear !default;
-$transition-collapse:         height .35s ease !default;
-
-
-
+$component-active-color : #fff !default;
+$component-active-bg : theme-color("primary") !default;
+$caret-width : .3em !default;
+$transition-base : all .2s ease-in-out !default;
+$transition-fade : opacity .15s linear !default;
+$transition-collapse : height .35s ease !default;
 $font-family-base: "LeagueGothicRegular" !default;
 $font-family-secondary: "Droid Sans" !default;
 // stylelint-enable value-keyword-case
@@ -50,11 +53,56 @@ $font-weight-bold: 700 !default;
 $font-weight-base: $font-weight-normal !default;
 $line-height-base: 1.5 !default;
 
-$btn-border-radius:           $border-radius !default;
-$btn-border-radius-lg:        $border-radius-lg !default;
-$btn-border-radius-sm:        $border-radius-sm !default;
+$dt-font-weight:              $font-weight-bold !default;
+
+$btn-border-radius : $border-radius !default;
+$btn-border-radius-lg : $border-radius-lg !default;
+$btn-border-radius-sm : $border-radius-sm !default;
+
+$headings-margin-bottom:      ($spacer / 2) !default;
+$headings-font-family:        inherit !default;
+$headings-font-weight:        500 !default;
+$headings-line-height:        1.1 !default;
+$headings-color:              inherit !default;
+
+// Paragraphs
+//
+// Style p element.
+
+$paragraph-margin-bottom:   1rem !default;
 
 
+// Dropdowns
+//
+// Dropdown menu container and contents.
+$dropdown-min-width : 10rem !default;
+$dropdown-padding-y : .5rem !default;
+$dropdown-spacer : .125rem !default;
+$dropdown-bg : #222222 !default;
+$dropdown-border-color : rgba(#000, .15) !default;
+$dropdown-border-width : $border-width !default;
+$dropdown-divider-bg : $gray !default;
+$dropdown-box-shadow : 0 .5rem 1rem rgba(#000, .175) !default;
+$dropdown-link-color : $gray !default;
+$dropdown-link-hover-color : darken($gray, 5%) !default;
+$dropdown-link-hover-bg : $gray !default;
+$dropdown-link-active-color : $component-active-color !default;
+$dropdown-link-active-bg : $component-active-bg !default;
+$dropdown-link-disabled-color : $gray !default;
+$dropdown-item-padding-y : .25rem !default;
+$dropdown-item-padding-x : 1.5rem !default;
+$dropdown-header-color : $gray !default;
+// Z-index master list
+//
+// Warning: Avoid customizing these values. They're used for a bird's eye view
+// of components dependent on the z-axis and are designed to all work together.
+$zindex-dropdown : 1000 !default;
+$zindex-sticky : 1020 !default;
+$zindex-fixed : 1030 !default;
+$zindex-modal-backdrop : 1040 !default;
+$zindex-modal : 1050 !default;
+$zindex-popover : 1060 !default;
+$zindex-tooltip : 1070 !default;
 // Navs
 $nav-link-padding-y: .4rem !default;
 $nav-link-padding-x: 1rem !default;
@@ -80,16 +128,13 @@ $navbar-toggler-padding-y: .25rem !default;
 $navbar-toggler-padding-x: .75rem !default;
 $navbar-toggler-font-size: $font-size-lg !default;
 $navbar-toggler-border-radius: $btn-border-radius !default;
-
 $navbar-default-color: rgba(#ffffff, 1) !default;
 $navbar-default-hover-color: rgba($main-color, .75) !default;
 $navbar-default-active-color: rgba($main-color, 1) !default;
 $navbar-default-disabled-color: rgba($main-color, .25) !default;
-$navbar-default-toggler-icon-bg: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='" + $navbar-default-color + "' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-$navbar-default-toggler-border-color: rgba($main-color,.1) !default;
-
-
-
+$navbar-default-toggler-icon-bg: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='"+$navbar-default-color+"' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+$navbar-default-toggler-border-color: rgba($main-color,
+.1) !default;
 // Links
 $link-color: #ffffff !default;
 $link-decoration: none !default;
@@ -107,3 +152,113 @@ sm: 576px,
 md: 768px,
 lg: 992px,
 xl: 1200px) !default;
+
+
+// Buttons
+//
+// For each of Bootstrap's buttons, define text, background and border color.
+
+$input-btn-padding-y:         .375rem !default;
+$input-btn-padding-x:         .75rem !default;
+$input-btn-line-height:       $line-height-base !default;
+
+$input-btn-padding-y-sm:      .25rem !default;
+$input-btn-padding-x-sm:      .5rem !default;
+$input-btn-line-height-sm:    $line-height-sm !default;
+
+$input-btn-padding-y-lg:      .5rem !default;
+$input-btn-padding-x-lg:      1rem !default;
+$input-btn-line-height-lg:    $line-height-lg !default;
+
+$btn-font-weight:             $font-weight-normal !default;
+$btn-box-shadow:              inset 0 1px 0 rgba(#ffffff,.15), 0 1px 1px rgba($black,.075) !default;
+$btn-focus-box-shadow:        0 0 0 3px rgba($body-bg, .25) !default;
+$btn-active-box-shadow:       inset 0 3px 5px rgba($black,.125) !default;
+
+$btn-link-disabled-color:     $gray !default;
+
+$btn-block-spacing-y:         .5rem !default;
+
+// Allows for customizing button radius independently from global border radius
+$btn-border-radius:           $border-radius !default;
+$btn-border-radius-lg:        $border-radius-lg !default;
+$btn-border-radius-sm:        $border-radius-sm !default;
+
+$btn-transition:              background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
+
+// Tables
+//
+// Customizes the `.table` component with basic values, each used across all table variations.
+
+$table-cell-padding:          .75rem !default;
+$table-cell-padding-sm:       .3rem !default;
+
+$table-bg:                    transparent !default;
+$table-accent-bg:             rgba($black,.05) !default;
+$table-hover-bg:              rgba($black,.075) !default;
+$table-active-bg:             $table-hover-bg !default;
+
+$table-border-width:          $border-width !default;
+$table-border-color:          $gray !default;
+
+$table-head-bg:               $gray !default;
+$table-head-color:            $gray !default;
+
+$table-dark-bg:               $gray !default;
+$table-dark-accent-bg:        rgba($white, .05) !default;
+$table-dark-hover-bg:         rgba($white, .075) !default;
+$table-dark-border-color:     lighten($gray, 7.5%) !default;
+$table-dark-color:            $body-bg !default;
+
+// Forms
+
+$input-bg:                              #ffffff !default;
+$input-disabled-bg:                     $gray !default;
+
+$input-color:                           $gray !default;
+$input-border-color:                    $gray !default;
+$input-btn-border-width:                $border-width !default; // For form controls and buttons
+$input-box-shadow:                      inset 0 1px 1px rgba($black,.075) !default;
+
+$input-border-radius:                   $border-radius !default;
+$input-border-radius-lg:                $border-radius-lg !default;
+$input-border-radius-sm:                $border-radius-sm !default;
+
+$input-focus-bg:                        $input-bg !default;
+$input-focus-border-color:              $black !default;
+$input-focus-box-shadow:                $input-box-shadow, $btn-focus-box-shadow !default;
+$input-focus-color:                     $input-color !default;
+
+$input-placeholder-color:               $gray !default;
+
+$input-height-border:                   $input-btn-border-width * 2 !default;
+
+$input-height-inner:                    ($font-size-base * $input-btn-line-height) + ($input-btn-padding-y * 2) !default;
+$input-height:                          calc(#{$input-height-inner} + #{$input-height-border}) !default;
+
+$input-height-inner-sm:                 ($font-size-sm * $input-btn-line-height-sm) + ($input-btn-padding-y-sm * 2) !default;
+$input-height-sm:                       calc(#{$input-height-inner-sm} + #{$input-height-border}) !default;
+
+$input-height-inner-lg:                 ($font-size-lg * $input-btn-line-height-lg) + ($input-btn-padding-y-lg * 2) !default;
+$input-height-lg:                       calc(#{$input-height-inner-lg} + #{$input-height-border}) !default;
+
+$input-transition:                      border-color ease-in-out .15s, box-shadow ease-in-out .15s !default;
+
+$form-text-margin-top:                  .25rem !default;
+
+$form-check-margin-bottom:              .5rem !default;
+$form-check-input-gutter:               1.25rem !default;
+$form-check-input-margin-y:             .25rem !default;
+$form-check-input-margin-x:             .25rem !default;
+
+$form-check-inline-margin-x:            .75rem !default;
+
+$form-group-margin-bottom:              1rem !default;
+
+$input-group-addon-color:               $input-color !default;
+$input-group-addon-bg:                  $gray !default;
+$input-group-addon-border-color:        $input-border-color !default;
+
+// Form validation
+$form-feedback-valid-color:         #ff0000 !default;
+$form-feedback-invalid-color:       #008000 !default;
