--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -13,7 +13,7 @@
                     <a class="nav-link" href="#/">Home</a>
                 </li>
                 {{#each this}}
-                <li class="nav-item"></li>
+                <li class="nav-item">
                 <a class="nav-link" href="#/category/show/{{this}}">{{this}}</a>
                 </li>
                 {{/each}}
@@ -28,7 +28,7 @@
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <form class="search form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2 search" type="text" placeholder="Search this website..." aria-label="Search">
             </form>
         </div>
