--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -32,9 +32,9 @@ $line-height-lg: 1.5 !default;
 $line-height-sm: 1.5 !default;
 $border-width: 1px !default;
 $border-color: #adb5bd !default;
-$border-radius: .25rem !default;
-$border-radius-lg: .3rem !default;
-$border-radius-sm: .2rem !default;
+$border-radius: .0 !default;
+$border-radius-lg: 0 !default;
+$border-radius-sm: 0 !default;
 $component-active-color : #fff !default;
 $component-active-bg : theme-color("primary") !default;
 $caret-width : .3em !default;
