--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -156,7 +156,13 @@
             </div>
         </div>
     </div>
-
+<div class="pagination">
+    <span>1</span>
+    <span>2</span>
+    <span>3</span>
+    <span>4</span>
+    <span>5</span>
+</div>
 </main>
 
 <footer>
