--- a/main.css
+++ b/main.css
@@ -1979,6 +1979,7 @@ main {
   margin-left: 28px;
   margin-bottom: 24px;
   padding: 0px;
+  max-width: min-content;
   background-color: #ffffff; }
   .post span {
     color: #ffffff;
@@ -2037,6 +2038,12 @@ main {
       text-transform: uppercase;
       color: #ffffff;
       font-size: 22px; }
+
+.pagination {
+  text-align: center;
+  font-size: 36px !important;
+  padding-top: 10px;
+  margin-left: 60px; }
 
 .fade {
   opacity: 0;
